Jenkins/deploy-in-k8s/deploy-jenkins.yaml
# 部署jenkins，已经nginx代理的镜像创酷，nginx会重定向到清华园；并利用initContainer进行挂载目录的权限修改。
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-depoly
  namespace: kube-ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccount: jenkins-sa
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "mirrors.jenkins-ci.org"
      containers:
      - name: mirror
        image: nginx:1.7.9
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx
          readOnly: true
      - name: jenkins
        image: jenkins/jenkins:lts
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 50000
          name: agent
          protocol: TCP
        resources:
          limits:
            cpu: 1500m
            memory: 2048Mi
          requests:
            cpu: 1500m
            memory: 2048Mi
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 12
        volumeMounts:
        - name: jenkinshome
          mountPath: /var/jenkins_home
      
      volumes:
      - name: jenkinshome
        persistentVolumeClaim:
          claimName: jenkins-pvc
      - name: nginx-conf
        configMap:
          name: jenkins-mirror-conf
          items:
          - key: nginx.conf  # cm的data中的key
            path: nginx.conf  # 相对于挂载目录的路径。这个key会会在挂载的目录下生成文件。这里就是nginx.conf文件上面挂载的/ect/nginx/nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: kube-ops
  labels:
    svc: jenkins
spec:
  selector:
    app: jenkins
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: web
    name: web
  - port: 50000
    name: agent
    targetPort: agent

---
# 通过nginx Ingress对外暴露jenkins服务
# 或者traefik Ingress 进行暴露

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins-ingressroute
  namespace: kube-ops
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`jenkins.k8s.local`)
    services:
    - name: jenkins-svc
      port: 8080
